# foxio-utilities

./: .env.example  .gitignore  README-skills.md  README.md  TODO.md  config_example.toml  run_weekly.sh
apollo-lookup/: README.md  apollo_company_lookup.py  ksscout_leads_to_apollo.py
foxio-quote/: SKILL.md
foxio-quote/assets/: template.html
ks-scout/: .env.example  config_example.toml  pyproject.toml  run_weekly.sh
ks-scout/src/ks_scout/: classify.py  cli.py  config.py  output.py
nrich/: README.md  config.example.yaml  pyproject.toml
nrich/src/nrich/: __init__.py  __main__.py  apollo.py  cli.py  config.py  io.py  pipeline.py  report.py  search.py
openspec-greenfield-explore/: SKILL.md
openspec/changes/archive/2026-06-29-add-json-outputs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-add-json-outputs/specs/contact-enrichment/: spec.md
openspec/changes/archive/2026-06-29-create-nrich-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-create-nrich-tool/specs/contact-enrichment/: spec.md
references/: addTddToOpenSpec.md
skill-distiller/: SKILL.md  condense.py
src/ks_scout/: cache.py  cli.py  detail.py  discover.py  http_client.py  output.py  score.py
vcv-rack-dsp-module-dev/: SKILL.md
