[project]
name = "ks-scout"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "click>=8",
    "groq>=0.9",
    "openai>=1.0",
    "pyyaml>=6",
]

[project.scripts]
ks-scout = "ks_scout.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ks_scout"]
